# Dice_Rolling

./: dice.py  pyproject.toml
